# Harness

./: .gitignore  CLAUDE.md  README.md  decision_taxonomy.json  demo.sh  pyproject.toml
.claude/: settings.json
.claude/rules/: build-history.md  phase-gates.md  testing.md
.claude/skills/karpathy-guidelines/: SKILL.md
harness/: app.py  cli.py  config.py  db.py  llm.py  policy.py  runtime.py  server.py  state_machine.py
harness/prompts/: compliance_checker.md  conflict_detector.md  contract_builder.md  decision_answerer.md  interrogator.md  memory_writer.md  syntax_executor.md
harness/schemas/: compliance.py  contract.py  decision.py  evaluation.py  task.py
harness/services/: claude_executor.py  conflict_service.py  contract_service.py  decision_service.py  evaluation_service.py  implementation_service.py  memory_service.py  scanner_service.py  task_service.py  validation_service.py
knowledge/: 01_product_vision.md  02_core_loop.md  03_decision_taxonomy.md  04_state_machine.md  05_db_schema.md  06_architecture.md  07_prompt_patterns.md  08_cli_reference.md  09_compliance_rules.md  10_memory_system.md  AGENT_LOOP.md  README.md
learning/: 2026-06-13-applying-claude-memory-principles-to-agent.md
plans/: claude_memory_for_harness.md  phase15_claude_code_integration.md
tests/: conftest.py  test_claude_executor.py  test_contract_service.py  test_decision_service.py  test_events.py  test_llm.py  test_memory_service.py  test_runtime.py  test_state_machine.py  test_validation_service.py
